# My_VAD

./: .gitignore  README.md  classic_vad.py  create_dataset.py  create_mfcc.py  extract_feature.py  extract_segments.py  gmm.py  hmm.py  main.py  plotting.py  pyproject.toml  silero_vad.py  stress_test_client.py  test_gmm_vad.py  train_gmm.py  vad_client.py  vad_server.py  vad_server_prod.py
data/: get_mixed_data.py
data/noise/: get_data.py
dataset/: mean.npy  std.npy
output/: energy_vad_output.json  silero_output.json
