[project]
name = "my-vad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "kaggle>=1.8.4",
    "kagglehub>=0.4.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=5.1.0",
]
